fix: update for bigraph class inference
